discussion/kv_engine/120085/120085_rev11_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-36227: Make VB Ready Queue lock free

For performance reasons make VBReadyQueue lock free.

Add testing hooks to test push/pop behaviour at interesting points.

The BGFetcher currently uses the VBReadyQueue in an unsual way
and copies the contents of the rather than iterates over them. This
is becuase performance didn't appear to be ideal when used in the
typical manner when we switched the BGFetcher to use a VBReadyQueue.
At the time it was suspected that the lock in the VBReadyQueue was
the cause of this, and removing it allows us to use the VBReadyQueue
in the idiomatic manner. This allows us to remove the swap function
which isn't trivially implementable (or perhaps at all) without the
lock.

Before:

Run on (8 X 2900 MHz CPU s)
CPU Caches:
  L1 Data 32 KiB (x4)
  L1 Instruction 32 KiB (x4)
  L2 Unified 256 KiB (x4)
  L3 Unified 8192 KiB (x1)
Load Average: 5.92, 14.15, 18.09
----------------------------------------------------------------------------------------------------------
Benchmark                                                                Time             CPU   Iterations
----------------------------------------------------------------------------------------------------------
VBReadyQueueBench/PushEmpty                                            229 ns          228 ns      3159429
VBReadyQueueBench/PushNotEmpty                                         227 ns          225 ns      2660504
VBReadyQueueBench/PopFront                                             215 ns          214 ns      3269592
VBReadyQueueBench/PopAllSanity                                      131318 ns       131243 ns         5263
VBReadyQueueBench/SanityOneElement/iterations:1000000/threads:1       8432 ns         4789 ns      1000000 PopTime=190.229n PushTime=188.584n
VBReadyQueueBench/SanityManyElements/iterations:5000/threads:1      884863 ns       703764 ns         5000 PopTime=748.125u PushTime=758.964u
VBReadyQueueBench/MPSCRandom/iterations:1000000/threads:8              302 ns         1906 ns      8000000 PopTime=2.34327u PushTime=17.9974u
VBReadyQueueBench/MPSCRandom/iterations:1000000/threads:16             248 ns         1847 ns     16000000 PopTime=3.98483u PushTime=60.9128u
VBReadyQueueBench/MPSCRandom/iterations:1000000/threads:32             230 ns         1792 ns     32000000 PopTime=7.43303u PushTime=230.825u
VBReadyQueueBench/MPSCRandom/iterations:1000000/threads:64             218 ns         1750 ns     64000000 PopTime=14.3609u PushTime=882.172u

After:

Run on (8 X 2900 MHz CPU s)
CPU Caches:
  L1 Data 32 KiB (x4)
  L1 Instruction 32 KiB (x4)
  L2 Unified 256 KiB (x4)
  L3 Unified 8192 KiB (x1)
Load Average: 1.88, 4.58, 6.88
----------------------------------------------------------------------------------------------------------
Benchmark                                                                Time             CPU   Iterations
----------------------------------------------------------------------------------------------------------
VBReadyQueueBench/PushEmpty                                            555 ns          552 ns      1250961
VBReadyQueueBench/PushNotEmpty                                         572 ns          567 ns      1233828
VBReadyQueueBench/PopFront                                             579 ns          572 ns      1243649
VBReadyQueueBench/PopAllSanity                                       96527 ns        95408 ns         7289
VBReadyQueueBench/SanityOneElement/iterations:1000000/threads:1       7298 ns         4104 ns      1000000 PopTime=169.917n PushTime=159.061n
VBReadyQueueBench/SanityManyElements/iterations:5000/threads:1      221810 ns       204079 ns         5000 PopTime=135.759u PushTime=130.714u
VBReadyQueueBench/MPSCRandom/iterations:1000000/threads:8             41.8 ns          281 ns      8000000 PopTime=269.648n PushTime=966.665n
VBReadyQueueBench/MPSCRandom/iterations:1000000/threads:16            41.3 ns          279 ns     16000000 PopTime=557.513n PushTime=3.31475u
VBReadyQueueBench/MPSCRandom/iterations:1000000/threads:32            40.3 ns          295 ns     32000000 PopTime=1023.49n PushTime=10.7873u
VBReadyQueueBench/MPSCRandom/iterations:1000000/threads:64            37.0 ns          287 ns     64000000 PopTime=1.74381u PushTime=42.9508u

Change-Id: Ie002342115bbe708ce3f15a6c4a5846fdea08ab0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-06-04 10:34:37.000000000
Message: 
Uploaded patch set 11.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-04 10:55:26.000000000
Message: 
Patch Set 11: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9494/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/vb_ready_queue_test.cc:114:12: error: no member named "pushUniqueQueuedValuesNotUpdated" in "VBReadyQueue" [clang-diagnostic-error]
    queue->pushUniqueQueuedValuesNotUpdated = [&]() {
           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9494/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/vb_ready_queue_test.cc:114:12:
error: no member named "pushUniqueQueuedValuesNotUpdated" in "VBReadyQueue" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9494/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36444/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\vb_ready_queue_test.cc(114): error C2039: "pushUniqueQueuedValuesNotUpdated": is not a member of "VBReadyQueue" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36444/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan.DJR_testing_please_ignore/job/master/1187/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan.DJR_testing_please_ignore/job/master/1187/ )

Undefined Sanitizer: kv_engine/engines/ep/src/objectregistry.cc:119:49: runtime error: member call on address 0x61d00001ae80 which does not point to an object of type "EventuallyPersistentEngine" ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan.DJR_testing_please_ignore/job/master/1187/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11481/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11481/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19069/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31134/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8090/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/45/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10137/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11068/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11213/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-06-04 11:09:26.000000000
Message: 
Patch Set 11: Code-Review-1

(2 comments)
Line:64, /COMMIT_MSG -> Are these numbers with or without the testing hooks compiled in?

Line:74, engines/ep/src/vb_ready_queue.h -> This should be `#ifndef` - "NDEBUG" means "no debug".

----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-04 13:24:48.000000000
MISMATCHED INLINE COMMENT
Line:64, /COMMIT_MSG -> without
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-04 13:24:48.000000000
MISMATCHED INLINE COMMENT
Line:74, engines/ep/src/vb_ready_queue.h -> Done
----------------------------------------------------------------------------------------------------------------------
